--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,17 @@ ipykernel==4.5.2
 ipython==5.3.0
 ipython-genutils==0.2.0
 ipywidgets==6.0.0
-Jinja2==2.9.5
+Jinja2>=2.10.1
 jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.0.0
 jupyter-console==5.1.0
 jupyter-core==4.3.0
 MarkupSafe==1.0
-mistune==0.7.4
+mistune>=0.8.1
 nbconvert==5.1.1
 nbformat==4.3.0
-notebook==4.4.1
+notebook>=5.7.8
 numpy==1.12.1
 packaging==16.8
 pandocfilters==1.4.1
